<resources>
    <string name="app_name">Kisan ki dukaan</string>
    <string name="welcome">Welcome</string>
    <string name="friends">Friends</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="Go_Back">Back To Login</string>
    <string name="new_user">New User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>