<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".screens.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@color/white"
        android:padding="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/new_user"
                android:textColor="@color/green"
                android:textSize="32sp" />

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout2">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="2">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="First Name"
                        android:imeOptions="actionGo"
                        android:textColor="@color/green"
                        android:textColorHint="@color/green" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout4"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="2">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Last Name"
                        android:imeOptions="actionGo"
                        android:textColor="@color/green"
                        android:textColorHint="@color/green" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>



            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etRegisterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionGo"
                    android:textColor="@color/green"
                    android:textColorHint="@color/green" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionGo"
                    android:textColor="@color/green"
                    android:textColorHint="@color/green" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etRegisterMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone No"
                    android:imeOptions="actionGo"
                    android:textColor="@color/green"
                    android:textColorHint="@color/green" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/green"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnGoback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/green"
                android:text="@string/Go_Back"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>